Unbreak snmp_pf(3) after the changes introduced in r338209

PR:		237011
Event:		Vienna Hackathon 2019
MFC after:	2 weeks


git-svn-id: svn+ssh://svn.freebsd.org/base/head@349264 ccf9f872-aa2e-dd11-9fc8-001c23d0bc1f